--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       <td class="cell"></td>
     </tr>
   </table>
+  <image src="https://github.com/LuckyMan612/tic-tac-toe-by-ai/blob/main/zdjecia/obraz_2023-01-26_220723792.png?raw=true">
   <script src="index.js"></script>
 </div>
