--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     </tr>
   </table>
   <image src="https://github.com/LuckyMan612/tic-tac-toe-by-ai/blob/main/zdjecia/obraz_2023-01-26_220723792.png?raw=true">
+  <image src="https://github.com/LuckyMan612/tic-tac-toe-by-ai/blob/main/zdjecia/obraz_2023-01-26_220737389.png?raw=true">
+  <image src="https://github.com/LuckyMan612/tic-tac-toe-by-ai/blob/main/zdjecia/obraz_2023-01-26_220750424.png?raw=true">
+  <image src="https://github.com/LuckyMan612/tic-tac-toe-by-ai/blob/main/zdjecia/obraz_2023-01-26_220808500.png?raw=true">
   <script src="index.js"></script>
 </div>
